--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ENozes</string>
+    <string name="icone_de_som">Icone de Som</string>
+    <string name="icone_de_musica">Icone de Musica</string>
 </resources>
